--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -18,6 +18,7 @@ groq = "^0.8.0"
 serpapi = "^0.1.5"
 google-search-results = "^2.4.2"
 python-dotenv = "^1.0.1"
+websockets = "^12.0"
 
 
 [build-system]
