--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -19,6 +19,9 @@ serpapi = "^0.1.5"
 google-search-results = "^2.4.2"
 python-dotenv = "^1.0.1"
 websockets = "^12.0"
+pvporcupinedemo = "^3.0.2"
+pvrecorder = "^1.2.2"
+pyaudio = "^0.2.14"
 
 
 [build-system]
