--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.1"
 websockets = "^12.0"
 pvrecorder = "^1.2.2"
 pyaudio = "^0.2.14"
+elevenlabs = "^1.3.0"
 
 
 [build-system]
