--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -16,10 +16,10 @@ groq = "^0.8.0"
 serpapi = "^0.1.5"
 google-search-results = "^2.4.2"
 python-dotenv = "^1.0.1"
-websockets = "^12.0"
 pvrecorder = "^1.2.2"
-pyaudio = "^0.2.14"
 elevenlabs = "^1.3.0"
+flask = "^3.0.3"
+flask-cors = "^4.0.1"
 
 
 [build-system]
