--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -20,6 +20,7 @@ pvrecorder = "^1.2.2"
 elevenlabs = "^1.3.0"
 flask = "^3.0.3"
 flask-cors = "^4.0.1"
+tavily-python = "^0.3.3"
 
 
 [build-system]
