--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -21,6 +21,9 @@ elevenlabs = "^1.3.0"
 flask = "^3.0.3"
 flask-cors = "^4.0.1"
 tavily-python = "^0.3.3"
+deepgram-sdk = "^3.3.1"
+pydub = "^0.25.1"
+simpleaudio = "^1.0.4"
 
 
 [build-system]
