--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,13 +10,19 @@ python = "^3.12"
 openai = "^1.35.6"
 fastapi = "^0.111.0"
 uvicorn = "^0.30.1"
-numpy = "^2.0.0"
 pydub = "^0.25.1"
 modal = "^0.63.12"
 groq = "^0.9.0"
 elevenlabs = "^1.3.1"
 faster-whisper = "^1.0.2"
 deepgram-sdk = "^3.3.1"
+numpy = "^2.0.0"
+torch = "^2.3.1"
+webrtcvad = "^2.0.10"
+scipy = "^1.14.0"
+torchaudio = "^2.3.1"
+librosa = "^0.10.2.post1"
+soundfile = "^0.12.1"
 
 
 [build-system]
