--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -24,6 +24,10 @@ tavily-python = "^0.3.3"
 deepgram-sdk = "^3.3.1"
 pydub = "^0.25.1"
 simpleaudio = "^1.0.4"
+colorlog = "^6.8.2"
+webrtcvad = "^2.0.10"
+setuptools = "^70.1.1"
+halo = "^0.0.31"
 
 
 [build-system]
