--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -23,6 +23,8 @@ scipy = "^1.14.0"
 torchaudio = "^2.3.1"
 librosa = "^0.10.2.post1"
 soundfile = "^0.12.1"
+cartesia = "^1.0.3"
+pyaudio = "^0.2.14"
 
 
 [build-system]
