--- a/web3/.env.template
+++ b/web3/.env.template
@@ -1,2 +1,4 @@
 VITE_API_BASE_URL=montelo-org--peach-api-fastapi-app-dev.modal.run
 VITE_SCREEN_BASE_URL=http://localhost:5174
+VITE_SUPABASE_URL=
+VITE_SUPABASE_PUBLIC_ANON_KEY=
