--- a/web3/biome.json
+++ b/web3/biome.json
@@ -7,7 +7,8 @@
 				"useExhaustiveDependencies": "off"
 			},
 			"a11y": {
-				"useKeyWithClickEvents": "off"
+				"useKeyWithClickEvents": "off",
+				"noSvgWithoutTitle": "off"
 			},
 			"complexity": {
 				"noForEach": "off"
