--- a/web3/package.json
+++ b/web3/package.json
@@ -13,13 +13,19 @@
   "dependencies": {
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
+    "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.51.3",
     "@types/three": "^0.166.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.19",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.13.0",
+    "react-social-icons": "^6.17.0",
     "react-use": "^17.5.0",
+    "tailwind-merge": "^2.4.0",
     "three": "^0.166.1"
   },
   "devDependencies": {
