--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "peach"
+name = "peach-cli"
 version = "0.1.0"
 description = ""
 authors = ["Sami Junior <sami.juniorco@gmail.com>"]
@@ -10,28 +10,15 @@ python = "^3.12"
 numpy = "^1.26.4"
 sounddevice = "^0.4.7"
 soundfile = "^0.12.1"
-openai = "^1.33.0"
 pvporcupine = "^3.0.2"
-groq = "^0.8.0"
-serpapi = "^0.1.5"
-google-search-results = "^2.4.2"
 python-dotenv = "^1.0.1"
 pvrecorder = "^1.2.2"
-elevenlabs = "^1.3.0"
-flask = "^3.0.3"
-flask-cors = "^4.0.1"
-tavily-python = "^0.3.3"
-deepgram-sdk = "^3.3.1"
-pydub = "^0.25.1"
-simpleaudio = "^1.0.4"
 colorlog = "^6.8.2"
-webrtcvad = "^2.0.10"
 setuptools = "^70.1.1"
 halo = "^0.0.31"
-uvicorn = "^0.30.1"
-fastapi = "^0.111.0"
-starlette = "^0.37.2"
 supabase = "^2.6.0"
+faster-whisper = "^1.0.3"
+webrtcvad = "^2.0.10"
 
 
 [build-system]
